# Blogging

backend/: Cargo.toml
backend/migrations/: 0001_create_tables.sql
backend/src/: main.rs  middleware.rs
backend/src/db/: db.rs
backend/src/routes/: auth.rs  blogs.rs  blogs_new.rs  mod.rs
backend/src/state/: authdata.rs  authstate.rs  blogdata.rs  mod.rs  state.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Header.tsx
frontend/src/components/Auth/: ProtectedRoute.tsx
frontend/src/components/Layout/: Navbar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: BlogPost.tsx  CreatePost.tsx  Home.tsx  Login.tsx  Profile.tsx  Register.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts
